# ExeKGLib

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  generate-code-reference.py  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml  sitemap.xml  task_hierarchy.md  third-party-licenses.md  versions.json
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci.yaml  combine-prs.yml  release.yaml  remove-temporary-docs.yaml
0.0pr-14/: index.html  sitemap.xml
0.0pr-14/adding-new-task-and-method/: index.html
0.0pr-14/getting-started/: index.html
0.0pr-14/reference/code-nav/: index.html
0.0pr-14/search/: search_index.json
0.0pr-14/third-party-licenses/: index.html
0.0pr-14/usage/: index.html
0.0pr-15/: 404.html  index.html
0.0pr-15/contributing/: index.html
0.0pr-15/extending/: index.html
0.0pr-15/external-resources/: index.html
0.0pr-15/getting-started/: index.html
0.0pr-15/installation/: index.html
0.0pr-15/license/: index.html
0.0pr-15/reference/kg_construction/: index.html
0.0pr-15/tasks-package-documentation/: index.html
0.0pr-15/third-party-licenses/: index.html
0.0pr-15/usage/: index.html
0.1/exported/: poe-options.txt
0.1/exported/changelog/: index.html
0.1/exported/coverage/: d_df1d6a85c404cc1c_say_py.html  status.json
0.1/exported/third-party-licenses/: index.html
0.1/getting-started/: index.html
0.1/installation/: index.html
0.1/reference/code-nav/: index.html
adding-new-task-and-method/: index.html
contributing/: index.html
description/: index.html
docs/: adding-new-task-and-method.md  contributing.md  description.md  extending.md  external-resources.md  generate-code-reference.py  getting-started.md  index.md  installation.md  license.md  supported-methods.md  supported-tasks-and-methods.md  tasks-package-documentation.md  third-party-licenses.md  usage.md
docs/reference/: index.md
examples/: MLPipeline.json  MLPipelineCrossValidation.json  MLPipelineExtended.json  MLPipelineModelSelection.json  MLPipelineSimple.json  StatsPipeline.json  VisuPipeline.json  ml_pipeline_creation.py  ml_pipeline_creation_from_json.py  ml_pipeline_cross_validation_creation.py  ml_pipeline_model_selection_creation.py  ml_pipeline_simple_creation.py  ml_pipeline_simple_edit.py  neo4j_visualization.cypher  simple_ml_kg.py  simple_stats_kg.py  simple_visu_kg.py  stats_pipeline_creation.py  visu_pipeline_creation.py
examples/data/: dummy_data.csv
examples/pipelines/: MLPipeline.ttl  StatsPipeline.ttl  VisuPipeline.ttl
exe_kg_lib/: __init__.py  config.py  kg_construction.py  kg_execution.py
exe_kg_lib/classes/: __init__.py  data_entity.py  entity.py  exe_kg.py  exe_kg_actors.py  exe_kg_base.py  kg_schema.py  method.py  task.py
exe_kg_lib/classes/exe_kg_mixins/: __init__.py  exe_kg_construction_cli_mixin.py  exe_kg_construction_mixin.py  exe_kg_edit_mixin.py  exe_kg_execution_mixin.py
exe_kg_lib/classes/exe_kg_serialization/: data_entity.py  method.py  pipeline.py  task.py
exe_kg_lib/classes/tasks/: README.md  ml_tasks.py  statistic_tasks.py  visual_tasks.py
exe_kg_lib/cli/: main.py
exe_kg_lib/examples/: simple_ml_kg.py  simple_stats_kg.py  simple_visu_kg.py
exe_kg_lib/examples/data/: breast_cancer_data.csv
exe_kg_lib/examples/pipelines/: MLPipeline.ttl  StatsPipeline.ttl  VisuPipeline.ttl
exe_kg_lib/scripts/: __init__.py  create_task_hierarchy_md.py
exe_kg_lib/shacl/: base_shape_graph_generator.py  shacl_shape_graph.ttl
exe_kg_lib/utils/: __init__.py  cli_utils.py  kg_creation_utils.py  kg_edit_utils.py  kg_validation_utils.py  query_utils.py  string_utils.py
exe_kg_lib/utils/task_utils/: ml_utils.py  statistic_utils.py  visual_utils.py
executable_ml_kgs/: kg_construction.py  kg_execution.py  utils.py
executable_ml_kgs/classes/: __init__.py  data_entity.py  entity.py  exe_kg.py  task.py
executable_ml_kgs/classes/graph/: __init__.py  data_entity.py  entity.py  exe_kg.py  ml_tasks.py  statistic_tasks.py  task.py  visual_tasks.py
executable_ml_kgs/classes/pipeline_execution/: __init__.py  ml_analyzer.py  pipeline_processor.py  statistics_analyzer.py  utils.py  visualizer.py
executable_ml_kgs/classes/tasks/: README.md  ml_tasks.py  statistic_tasks.py  visual_tasks.py
executable_ml_kgs/cli/: main.py  say.py
executable_ml_kgs/examples/: simple_ml_kg.py  simple_stats_kg.py  simple_visu_kg.py  simple_visual_kg.py
executable_ml_kgs/examples/pipelines/: MLPipeline.ttl
executable_ml_kgs/utils/: __init__.py  cli_utils.py  kg_creation_utils.py  ml_utils.py  query_utils.py
executable_ml_kgs/utils/task_utils/: ml_utils.py  statistic_utils.py
extending/: index.html
external-resources/: index.html
getting-started/: index.html
installation/: index.html
js/: mathjax.js  tablesort.js
latest/: 404.html  generate-code-reference.py  index.html  objects.inv  sitemap.xml
latest/contributing/: index.html
latest/license/: index.html
latest/reference/: index.html
latest/search/: search_index.json
license/: index.html
pr-14/: 404.html
pr-14/contributing/: index.html
pr-14/extending/: index.html
pr-14/external-resources/: index.html
pr-14/installation/: index.html
pr-14/license/: index.html
pr-14/reference/: index.html
pr-14/tasks-package-documentation/: index.html
pr-15/: sitemap.xml
pr-15/adding-new-task-and-method/: index.html
pr-15/reference/: index.html
pr-15/search/: search_index.json
reference/: index.html
reference/code-nav/: index.html
reference/config/: index.html
reference/kg_construction/: index.html
reference/kg_execution/: index.html
search/: search_index.json
stylesheets/: extra.css
supported-methods/: index.html
supported-tasks-and-methods/: index.html
tasks-documentation/: index.html
tasks-package-documentation/: index.html
tests/: test_cli.py
third-party-licenses/: index.html
usage/: index.html
(+78 files in other folders)
